<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_toggle_focus"
        android:title="@string/focus_persona"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_toggle_chakra"
        android:title="@string/chakra_persona"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_persona"
        android:title="@string/edit_persona"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_persona"
        android:title="@string/delete_persona"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="never" />
</menu>

